[workspace]
members = [
]
[package]
name = "librustv2g"
authors = ["Terence Stenvold @ChargeX GmbH"]
version = "0.1.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "librustv2g"
path = "rustv2g-lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
panic-probe = { version = "1.0.0", default-features = false }
