[workspace]
members = [
]
[package]
name = "rustv2g"
authors = ["Terence Stenvold"]
version = "0.1.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rustv2g"
path = "src/rustv2g.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
panic-probe = { version = "1.0.0", default-features = false }
