[package]
name = "rustv2g"
version = "0.1.0"
edition = "2021"
authors = ["Terence Stenvold"]
description = "A no-std V2G communication library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tstenvold/rustv2g"
keywords = ["v2g", "exi", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[lib]
name = "rustv2g"
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]
# Keep empty for no-std compatibility

[dev-dependencies]
# Test dependencies go here
hex = "0.4"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
